# ezlog

./: .gitignore  CHANGELOG.md  Cargo.toml  EZLog.podspec  JOURNAL.md  README.md  README.zh-CN.md  README_CN.md  RELEASES.md  b_ios.sh  build_for_android.sh  bump.sh  hello  hello.c  publish_all.sh  publish_android.sh  publish_ios.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: build_test.yml  publish_android.yml  publish_flutter.yml  publish_ios.yml  publish_npm.yml  publish_pages.yml  publish_rust.yml  publish_tauri.yml
.github/workflows/install-mdbook/: action.yml
.github/workflows/setup-android/: action.yml
android/: .gitignore  README.md  b_android.sh  build.gradle  debugkey.jks  gradle.properties  publish.sh  release.gradle  sampleBuild.sh  settings.gradle  signing.properties
android/app/: build.gradle
android/app/src/benchmark/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/benchmark/: build.gradle
android/benchmark/src/androidTest/: AndroidManifest.xml
android/benchmarkable/: build.gradle.kts
android/buildSrc/: build.gradle.kts
android/buildSrc/src/main/java/wtf/s1/buildsrc/: Configs.kt
android/gradle/: android-lib-build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/lib-ezlog/: build.gradle  gradle.properties  lib-proguard-rules.txt
android/lib-ezlog/src/androidTest/java/ezlog/: TestJavaCompat.java
android/lib-ezlog/src/main/: AndroidManifest.xml
android/lib-ezlog/src/main/java/wtf/s1/ezlog/: Callback.java  EZLog.java  EZLog.kt  (+6 more)
android/macrobenchmark/: build.gradle.kts
android/macrobenchmark/src/main/: AndroidManifest.xml
android/microbenchmark/: build.gradle
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  gencbind.sh
crates/core/src/: android.rs  config.rs  crypto.rs  errors.rs  events.rs  ios.rs  lib.rs  thread_name.rs
crates/ezlog_core/: Cargo.toml
crates/ezlog_core/src/: android.rs  appender.rs  config.rs  errors.rs  lib.rs
crates/ezlog_jni/: Cargo.toml
doc/: infra.md
docs/: JOURNAL.md  README.md  book.toml  language-picker.css
docs/po/: messages.pot  zh.po
docs/src/: SUMMARY.md  architecture.md  benchmark.md  build.md  introduction.md  query.md  why.md
docs/src/platform/: android.md  flutter.md  ios.md  rust.md
docs/theme/: index.hbs
examples/: android_hello_world.rs  hello_world.rs  nix_hello_world.rs
examples/android_preview/: Cargo.toml
examples/android_preview/src/: lib.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/nest_log/: Cargo.toml
examples/nest_log/src/: main.rs
ezlog-cli/: Cargo.toml  README.md
ezlog-cli/npm/: package.json.tmpl
ezlog-cli/npm/ezlog-cli/: .gitignore  package.json
ezlog-cli/npm/ezlog-cli/src/: index.ts
ezlog-cli/src/: main.rs
ezlog-core/: Cargo.toml  README.md
ezlog-core/src/: android.rs  appender.rs  compress.rs  config.rs  crypto.rs  decode.rs  errors.rs  events.rs  ffi_c.rs  ffi_java.rs  init.rs  ios.rs  lib.rs  logger.rs  recorder.rs  thread_name.rs
ezlog-core/tests/: integration_test.rs
ezlog_flutter/: README.md  pubspec.yaml
ezlog_flutter/android/: build.gradle  settings.gradle
ezlog_flutter/android/src/main/: AndroidManifest.xml
ezlog_flutter/example/: README.md  pubspec.yaml
ezlog_flutter/example/android/: build.gradle
ezlog_flutter/example/android/app/: build.gradle
ezlog_flutter/example/android/app/src/debug/: AndroidManifest.xml
ezlog_flutter/example/android/app/src/main/: AndroidManifest.xml
ezlog_flutter/example/ios/: Podfile
ezlog_flutter/example/ios/Runner/: Info.plist
ezlog_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
ezlog_flutter/example/lib/: main.dart
ezlog_flutter/example/test/: widget_test.dart
ezlog_flutter/ios/: ezlog_flutter.podspec
ezlog_flutter/ios/Classes/: EzlogFlutterPlugin.h  EzlogFlutterPlugin.m  SwiftEzlogFlutterPlugin.swift
ezlog_flutter/lib/: ezlog_flutter.dart  ezlog_flutter_method_channel.dart  ezlog_flutter_platform_interface.dart
ezlog_flutter/test/: ezlog_flutter_method_channel_test.dart  ezlog_flutter_test.dart
ezlogcli/: Cargo.toml  README.md
ezlogcli/resources/test/: test.mmap
ezlogcli/src/: main.rs
ios/: .gitignore  EZLog.podspec  Package.swift  Podfile  README.md  b_ios.sh  cbindgen.toml
ios/EZLog.xcodeproj/: project.pbxproj
ios/EZLog/Source/: EZLog.swift  ezlog.h
ios/EZLog/Sources/: EZLog.swift  ezlog.h
ios/EZLog/ezlog.docc/: ezlog.md
ios/EZlog.xcodeproj/: project.pbxproj
ios/EZlog.xcworkspace/: contents.xcworkspacedata
ios/benchmark/: BenchmarkConst.swift  EZLogBenchmark.swift  LogCase.swift  LoganBenchmark.swift
ios/benchmarkable/: Util.swift
ios/demo/: ContentView.swift  DemoApp.swift  Package.swift
ios/demo/Sources/: ContentView.swift  DemoApp.swift  EZSample.swift
ios/ezlog/: EZLog.swift  ezlog.h
ios/ezlog/Source/: EZLog.swift
ios/framework/EZLogFramework.xcframework/: Info.plist
ios/framework/ezlog.xcframework/: Info.plist
ios/framework/ezlog.xcframework/ios-arm64_x86_64-simulator/: Headers
src/: appender.rs  compress.rs  config.rs  crypto.rs  errors.rs  events.rs  lib.rs  libs.rs
test-compat/: Cargo.toml
test-compat/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui-tauri/: .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui-tauri/src/: App.vue  LogViewer.vue  Modal.vue  SimpleToast.vue  styles.css
ui-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui-tauri/src-tauri/capabilities/: main.json  migrated.json
ui-tauri/src-tauri/icons/: icon.icns
ui-tauri/src-tauri/src/: lib.rs  main.rs
ui-tauri/src/composables/: useToast.ts
ui/src/: App.vue  Modal.vue
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/components/: LogList.vue
(+15 files in other folders)
