[package]
name = "ezlog_space"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ezlog-cli", "ezlog-core"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[dependencies]
ezlog = {path = "ezlog-core"}
log = "0.4.17"
time = { version = "0.3", default-features = false, features = ["formatting"] }

[target.'cfg(target_os = "android")'.dependencies]
# ndk-glue = "0.6.2"

[dev-dependencies]
dirs = "4.0"


[[example]]
name = "android_hello_world"
path = "examples/android_hello_world.rs"
crate-type = ["cdylib"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30
max_sdk_version = 29

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[[example]]
name = "nix_hello_world"
path = "examples/nix_hello_world.rs"
crate-type = ["bin"]