[package]
name = "ezlog-cli"
version = "0.2.0-alpha.2"
edition = "2021"
description = "EZLog command line tool"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog", "cli"]

[dependencies]
ezlog = { version = "0.2.0-alpha.2", path = "../ezlog-core", features = ["decode"] }
clap = { version = "4.0.8", features = ["derive"] }
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"