[package]
name = "ezlog"
version = "0.1.7"
edition = "2021"
description = "EZLog core function and code"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["log"]
backtrace = ["dep:backtrace"]
log = ["dep:log"]
decode = []

[dependencies]
libc = "0.2"
memmap2 = "0.5.3"
log = { version = "0.4", optional = true }
byteorder = "1"
flate2 = "1.0"
aead = "0.5.0"
aes-gcm = "0.10.1"
time = { version = "0.3", default-features = false, features = ["formatting", "parsing"] }
crossbeam-channel = "0.5"
thread-id = "4.0.0"
once_cell = "1.12"
thiserror = "1"
backtrace = { version = "0.3", optional = true}
integer-encoding = "3.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.0"
android_logger = "0.13"

[target.'cfg(windows)'.dependencies]
windows = "0.44"
windows-sys = { version = "0.45", features = ["Win32_System_Threading", "Win32_Foundation"] } 

[dev-dependencies]
dirs = "4.0"
time = { version = "0.3", default-features = false, features = ["macros"] }