[package]
name = "ezlog"
version = "0.2.0-beta.1"
edition = "2021"
description = "EZLog core function and code"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
log = ["dep:log"]
decode = ["dep:aes-gcm"]
android_logger = ["log","dep:android_logger"]

[dependencies]
libc = "0.2"
memmap2 = "0.6"
log = { version = "0.4", optional = true }
byteorder = "1"
flate2 = "1.0"
aead = "0.5.1"
cipher = "0.4.4"
aes-gcm = { version = "0.10.1", optional = true }
aes-gcm-siv = "0.11.1"
time = { version = "0.3", default-features = false, features = ["formatting", "parsing"] }
crossbeam-channel = "0.5"
thread-id = "4.0.0"
once_cell = "1.12"
thiserror = "1"
integer-encoding = "3.0"
bitflags = "2.0.1"
android_logger = { version = "0.13", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.0"

[target.'cfg(windows)'.dependencies]
windows = "0.46"
windows-sys = { version = "0.45", features = ["Win32_System_Threading", "Win32_Foundation"] } 

[dev-dependencies]
dirs = "5.0"
time = { version = "0.3", default-features = false, features = ["macros"] }