[package]
name = "ezlog"
version = "0.2.0"
edition = "2021"
description = "EZLog core function and code"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["json"]
log = ["dep:log"]
json = ["serde", "serde_json", "bitflags/serde"]
decode = ["aes-gcm", "regex", "log", "hex"]
android_logger = ["log","dep:android_logger"]

[dependencies]
libc = "0.2"
memmap2 = "0.9"
log = { version = "0.4", optional = true }
byteorder = "1"
flate2 = "1.0"
aead = "0.5.1"
cipher = "0.4.4"
aes-gcm = { version = "0.10.1", optional = true }
aes-gcm-siv = "0.11.1"
time = { version = "0.3", default-features = false, features = ["formatting", "parsing"] }
crossbeam-channel = "0.5"
thread-id = "5.0.0"
once_cell = "1.12"
thiserror = "1"
integer-encoding = "4.0"
bitflags = { version = "2.0.1", features = []}
android_logger = { version = "0.14", optional = true }
regex = { version = "1", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
hex = { version = "0.4", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.0"

[target.'cfg(windows)'.dependencies]
windows = "0.56"
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] } 

[dev-dependencies]
dirs = "6.0"
time = { version = "0.3", default-features = false, features = ["macros"] }
test-compat = { path = "../test-compat" }