[package]
name = "ezlog"
version = "0.1.0-dev"
edition = "2021"
description = "EZLog core function and code"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
libc = "0.2"
memmap2 = "0.5.3"
log = "0.4.17"
byteorder = "1"
flate2 = "1.0"
aead = "0.4.3"
aes-gcm = "0.9.4"
time = { version = "0.3", default-features = false, features = ["formatting"] }
crossbeam-channel = "0.5"
thread-id = "4.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19.0"


[dev-dependencies]
dirs = "4.0"