[package]
name = "ezlog"
version = "0.1.0-dev"
edition = "2021"
description = "EZLog core function and code"
homepage = "https://github.com/s1rius/ezlog"
repository = "https://github.com/s1rius/ezlog"
license = "MIT OR Apache-2.0"
keywords = ["ezlog"]

[lib]
crate-type = ["dylib"]

[dependencies]
memmap2 = "0.5.3"
log = "0.4.17"
byteorder = "1"
lazy_static = "1.4.0"
flate2 = "1.0"
aead = "0.4.3"
aes-gcm = "0.9.4"
time = { version = "0.3", default-features = false, features = ["formatting"] }
crossbeam-channel = "0.5"
thread-id = "4.0.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.18.0"
libc = "0.2"
ndk-glue = "0.6.2" # Substitute this with the latest ndk-glue version you wish to use

[dev-dependencies]
dirs = "4.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*