[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezlog = { path = "../../ezlog-core", features = ["log", "decode"]}
log = "0.4"
env_logger = "0"
dirs = "5.0"
time = { version = "0.3", default-features = false, features = ["macros"] }
rand = "0.8"